Closed
Bug 357257
Opened 18 years ago
Closed 18 years ago
Search autocomplete/suggestions use only half of the available width due to the word "suggestions"
Categories
(Firefox :: Search, defect)
Firefox
Search
Tracking
()
RESOLVED
FIXED
Firefox 3 alpha3
People
(Reporter: jruderman, Assigned: enndeakin)
References
Details
Attachments
(2 files)
17.28 KB,
image/png
|
Details | |
2.31 KB,
patch
|
neil
:
review+
Gavin
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Focus the search bar.
2. Type "pas".
Result: The autocomplete results and suggestions are cut off at about 12 characters, using only about half the width available. It seems that they are constrained because of the presence of the word "Suggestions" to the right of the first suggestion.
Expected: only cut off the suggestion that's immediately to the left of the word "Suggestions", or give the word "Suggestions" its own (non-selectable) row.
Reporter | ||
Comment 1•18 years ago
|
||
Comment 2•18 years ago
|
||
This probably depends on the solution to bug 339363 (see bug 339363 comment 1).
Depends on: 339363
Reporter | ||
Comment 3•18 years ago
|
||
This problem exists on Windows too.
OS: Mac OS X 10.4 → All
Hardware: Macintosh → All
Reporter | ||
Comment 4•18 years ago
|
||
*** Bug 363274 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 5•18 years ago
|
||
Assignee: nobody → enndeakin
Status: NEW → ASSIGNED
Attachment #256845 -
Flags: superreview?(neil)
Attachment #256845 -
Flags: review?(neil)
Comment 6•18 years ago
|
||
Comment on attachment 256845 [details] [diff] [review]
allow cells to overflow
Sorry, but this patch makes no sense to me whatsoever.
Attachment #256845 -
Flags: superreview?(neil)
Attachment #256845 -
Flags: review?(neil)
Comment 7•18 years ago
|
||
Comment on attachment 256845 [details] [diff] [review]
allow cells to overflow
>- nscoord width = aTextRect.width;
>+ width = maxWidth;
OK, I get this now. r+sr=me; can't verify the toolkit change though.
Attachment #256845 -
Flags: superreview+
Attachment #256845 -
Flags: review+
Assignee | ||
Comment 8•18 years ago
|
||
Comment on attachment 256845 [details] [diff] [review]
allow cells to overflow
OK, maybe gavin can check the toolkit part
Attachment #256845 -
Flags: review?(gavin.sharp)
Updated•18 years ago
|
Attachment #256845 -
Flags: review?(gavin.sharp) → review+
Assignee | ||
Updated•18 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•18 years ago
|
Flags: in-testsuite?
Updated•18 years ago
|
Target Milestone: --- → Firefox 3 alpha3
Updated•11 years ago
|
Flags: in-testsuite?
You need to log in
before you can comment on or make changes to this bug.
Description
•