Bug 357257, autocomplete items cut off by the word 'Suggestions', r=gavin,neil,sr=neil